--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -1,6 +1,8 @@
 .card {
     padding: 16px;
-    width: 112px;
+    min-width: 112px;
+    width:112px;
+    max-width: 112px;
     height: 150px;
     box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 12%);
     border-radius: 12px;
@@ -24,8 +26,10 @@
 }
 
 .addCard {
+    min-width: 112px;
+    width:112px;
+    max-width: 112px;
     padding: 16px;
-    width: 112px;
     height: 150px;
     box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 12%);
     border-radius: 12px;
@@ -34,3 +38,8 @@
     justify-content: center;
     align-items: center;
 }
+
+.ripple-parent {
+    position: relative;
+    overflow: hidden;
+}  
