Button style 수정

--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -33,13 +33,13 @@
 
 .large {
     width: 100%;
-    max-width: 360px;
+    // max-width: 360px;
     height: 72px;
 }
 
 .medium {
     width: 100%;
-    max-width: 182px;
+    // max-width: 182px;
     height: 48px;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 50%);
 }
@@ -48,4 +48,5 @@
     width: 100%;
     max-width: 138px;
     height: 48px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 50%);
 }
