--- a/src/pages/Setting/Setting.scss
+++ b/src/pages/Setting/Setting.scss
@@ -31,26 +31,12 @@
         width: 100%;
         height: 100%;
         display: flex;
-
-        .leftBox {
-            width: 50%;
-
-            .progressBox {
-                position: relative;
-                transform: rotate(90deg);
-                transform-origin: top left;
-                left: 40px;
-            }
-        }
-
-        .rightBox {
-            width: 50%;
+        flex-direction: column;
 
             .line {
                 margin: 32px 0;
                 border: 1px solid #808080;
             }
-        }
     }
 }
 
@@ -66,8 +52,8 @@ ion-modal#modal {
 
 ion-modal#modal {
     .wrapper {
-        max-width: 360px;
-        width: 360px;
+        // max-width: 360px;
+        // width: 360px;
         padding: 32px 16px;
         display: flex;
         flex-direction: column;
@@ -75,6 +61,7 @@ ion-modal#modal {
         align-items: center;
 
         .repeatListInput{
+            max-width: 200px;
             border:none;
             background-color: var(--ion-background-color);
             padding: 12px 8px;
@@ -85,5 +72,24 @@ ion-modal#modal {
         .repeatListInput:focus{
             outline:none;
         }
+        .modalText{
+            font-size:20px;
+            margin-bottom: 48px;
+        }
     }
+
+}
+.floatingButton{
+    position:fixed;
+    bottom:32px;
+    right:32px;
+    width:72px;
+    height:72px;
+    border-radius: 50%;
+    background-color: var(--tomato200);
+    box-shadow: 0px 0px 18px 4px rgba(0, 0, 0, 25%);
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    z-index:999999;
 }
