--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,21 +23,6 @@ http://ionicframework.com/docs/theming/ */
   --tomatoBG: linear-gradient(180deg, #FFEBEC 0%, rgba(255, 255, 255, 0.933333) 100%);
 
 
-  /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
-
-  /** secondary **/
-  --ion-color-secondary: #3dc2ff;
-  --ion-color-secondary-rgb: 61, 194, 255;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #36abe0;
-  --ion-color-secondary-tint: #50c8ff;
 
   /** tertiary **/
   --ion-color-tertiary: #5260ff;
@@ -103,19 +88,19 @@ http://ionicframework.com/docs/theming/ */
 //    */
 
 //   body {
-//     --ion-color-primary: #428cff;
-//     --ion-color-primary-rgb: 66,140,255;
-//     --ion-color-primary-contrast: #ffffff;
-//     --ion-color-primary-contrast-rgb: 255,255,255;
-//     --ion-color-primary-shade: #3a7be0;
-//     --ion-color-primary-tint: #5598ff;
+//   
+//   
+//   
+//   
+//   
+//   
 
-//     --ion-color-secondary: #50c8ff;
-//     --ion-color-secondary-rgb: 80,200,255;
-//     --ion-color-secondary-contrast: #ffffff;
-//     --ion-color-secondary-contrast-rgb: 255,255,255;
-//     --ion-color-secondary-shade: #46b0e0;
-//     --ion-color-secondary-tint: #62ceff;
+//   
+//   
+//   
+//   
+//   
+//   
 
 //     --ion-color-tertiary: #6a64ff;
 //     --ion-color-tertiary-rgb: 106,100,255;
